Enhance household event publishing and summary generation
- Add logging for event publishing in `DefaultHouseholdEventPublisher`
- Update event actions to use more descriptive constants
- Implement `toSummary` method in `Household` to generate summaries with user details
- Refactor household member addition and removal to publish updated events
- Change invitation endpoint from `/invitations` to `/invite`